added 2-nd task info

--- a/Отчет_по_задаче.ipynb
+++ b/Отчет_по_задаче.ipynb
@@ -578,8 +578,188 @@
     "1. Описать ключевые преимущества этих сайтов по сравнению с нами и \n",
     "1. Сделать сравнение измеримых показателей.\n",
     "\n",
+    "## Решение задания №2:\n",
+    "\n",
+    "Как найти конкурентов сайта hh.ru ?<br/>\n",
+    "Как сказал бы мудрый индеец: \"Надо одеть макасины клиента и пойти по пути клиента\".<br/>\n",
     "<br/>\n",
-    "<br/>"
+    "Клиент hh.ru - это тот, кто платит, то есть, работодатель.<br/>\n",
+    "\n",
+    "Работодатель может вести:\n",
+    "- непрерывный найм (рабочие вакансии, менеджеры холодных продаж и т.д.), когда у компании интенсивное расширение, большие штаты и/или закономерная текучка;\n",
+    "- случайный найм (нужен специалист какого-то профиля, или управленец).\n",
+    "\n",
+    "По моим представлениям, рекрутинг - это процесс, который никто не хочет растягивать и проводить его \"на расслабоне\". Поэтому, первая задача отдела HR - это наладить стабильный поток кандидатов на отбор:\n",
+    "- Разместить вакансию на всех работных сайтах,\n",
+    "- Расклеить объявления на столбах,\n",
+    "- Рассказать сотрудникам что у нас есть вакансия и бонус от компании, если приведете друга,\n",
+    "- Поболтать с кем-нибудь в столовой,\n",
+    "- Схантить кого-нибудь из соседних офисов. \n",
+    "\n",
+    "Короче, использовать все возможные источники кандидатов.<br/>\n",
+    "Задание у меня про сайт hh.ru. Далее посмотрю какие источники - сайты есть.<br/>\n",
+    "\n",
+    "Работные сайты ведь привлекают не только работодателей, но и работников. И продвигают свои сайты как для поисковых запросов работодателей, так и работников. <br/>\n",
+    "\n",
+    "Человек может набирать полное доменное имя сайта headhunter.ru И заходить прямо на сайт. Но таких по моим наблюдениям мало. Большинство проходят по одному из путей:\n",
+    "- Набирают \"headhunter\" в браузере и их перекидывает в поиск (витальный запрос),\n",
+    "- Набирают этот же витальный запрос русскими буквами \"хэдхантер\",\n",
+    "- Витальные запросы других сайтов (если кто-то их еще помнит / уже запомнил),\n",
+    "- Набирают в поиске или браузере какой-то поисковый запрос, связанный с поиском работы или кандидатов. \n",
+    "\n",
+    "Основной поставщик поискового трафика в России - это Яндекс. И у него есть инструмент для изучения частотности поисковых запросов. wordstat.yandex.ru <br/>\n",
+    "\n",
+    "### Я собрал несколько основных ключевых запросов (в скобочках частота запросов в месяц):\n",
+    "\n",
+    "![screen3.png](pics/screen3.png)\n",
+    "\n",
+    "Сейчас посмотрю какие конкуренты есть в поисковой выдаче, и какие рекламируются - платят за первые размещения и спецразмещения. \n",
+    "<br/>\n",
+    "\n",
+    "### Для региона Москва выдача по всем ключам выдает список из 4-х сайтов:\n",
+    "\n",
+    "![screen4.png](pics/screen4.png)\n",
+    "\n",
+    "\n",
+    "Это сайты:\n",
+    "\n",
+    "1. headhunter.ru - в поисковой выдаче и в рекламе,\n",
+    "1. avito.ru - в поисковой выдаче и в рекламе,\n",
+    "1. superjob.ru - в поисковой выдаче и в рекламе,\n",
+    "1. rabota.ru - присутствует только в выдаче\n",
+    "\n",
+    "\n",
+    "### Для региона Краснодар выдача по всем ключам выдает список из 4-х сайтов:\n",
+    "\n",
+    "![screen5.png](pics/screen5.png)\n",
+    "\n",
+    "\n",
+    "Те же сайты:\n",
+    "\n",
+    "1. headhunter.ru - в поисковой выдаче и в рекламе,\n",
+    "1. avito.ru - в поисковой выдаче и в рекламе,\n",
+    "1. superjob.ru - в поисковой выдаче и в рекламе,\n",
+    "1. rabota.ru - присутствует только в выдаче\n",
+    "\n",
+    "\n",
+    "### Для региона Приморье (Владивосток) картина немного другая:\n",
+    "\n",
+    "![screen6.png](pics/screen6.png)\n",
+    "\n",
+    "Во-первых, в этом регионе никто не рекламируется в поиске Яндекс. Здесь, видимо, оборотов маловато. Есть только поисковая выдача и органический трафик. \n",
+    "\n",
+    "В выдаче все те же сайты, плюс один новый (farpost.ru), который всреднем на втором месте по всем ключам:\n",
+    "\n",
+    "1. headhunter.ru - только поисковая выдача,\n",
+    "1. farpost.ru - только поисковая выдача,\n",
+    "1. avito.ru - только поисковая выдача,\n",
+    "1. superjob.ru - только поисковая выдача\n",
+    "\n",
+    "\n",
+    "### Хорошо. Есть список конкурентов. Надо их оцифровать и сравнить по цифрам. \n",
+    "\n",
+    "#### Начну с оценки размера аудитории.<br/>\n",
+    "\n",
+    "#### Аудитория состоит из двух сегментов:\n",
+    "1. Работодатели (плательщики),\n",
+    "1. Соискатели (не платят)\n",
+    "\n",
+    "Аудиторию соискателей надо дальше сегментировать. Думаю, что неправильно просто найти количество резюме, и количество работодателей на каждом сайте. Думаю, что есть нюансы. <br/>\n",
+    "\n",
+    "И если бы это была боевая задача, то я бы пошел к бизнесу и задавал бы много вопросов. Чтобы понять как мне это лучше сделать. А они точно есть. <br/>\n",
+    "\n",
+    "Но возможности подойти к бизнесу у меня нет. Поэтому буду исходить из своих гипотез:<br/>\n",
+    "\n",
+    "#### На мой взгляд, соискателей можно грубо разделить на следующие группы:\n",
+    "\n",
+    "1. Рабочие специальности (продавец, мерч, грузчик, уборщица, курьер...)\n",
+    "1. Востребованные высококвалифицированные специалисты интенсивно развивающихся отраслей (например, IT)\n",
+    "1. Работники, которые везде есть и без них никуда (бухгалтера, экономисты)\n",
+    "1. Менеджеры первого звена, линейные руководители, асистенты менеджеров...\n",
+    "1. Топ менеджмент. \n",
+    "\n",
+    "#### Сравнивать буду 5 сайтов:\n",
+    "- headhunter.ru\n",
+    "- avito.ru\n",
+    "- superjob.ru\n",
+    "- rabota.ru\n",
+    "- farpost.ru (он в лидерах только во Владивостоке)\n",
+    "\n",
+    "И вот по этим вводным буду сравнить работные сайты. <br/>\n",
+    "\n",
+    "Думаю, что существенная часть рынка рабочих вакансий проходит мимо работных сайтов. Продавцы и уборщицы не все могут написать резюме. Да и зачем, когда все пятерочки и магниты обклеены объявлениями \"требуются...\". На рюкзаках курьеров Яндекс Еды тоже написаны контакты для трудоустройства. И так далее. <br/>\n",
+    "\n",
+    "Рынок программистов, аналитиков и топ менеджмента сосредоточен в Москве и немного в Питере. В регионах он маленький. <br/>\n",
+    "\n",
+    "Бухгалтеров и экономистов много. Но текучка там меньше чем у менеджеров по продажам. \n",
+    "\n",
+    "Топ менеджеры охотно публикуют свои резюме на работных сайтах. И менее охотно на сайтах бесплатных объявлений типа avito.ru и farpost.ru\n",
+    "\n",
+    "### Буду сравнивать аудитории разных сайтов в указанных регионах. \n",
+    "***Продавец:*** - Для вакансий - искать в названии вакансии, для резюме - в названии резюме\n",
+    "\n",
+    "***Курьер:*** - также\n",
+    "\n",
+    "***Программист:*** для вакансий искать по специализации \"Программист, разработчик\"; для резюме - искать по специализации \"Программист, разработчик\"\n",
+    "\n",
+    "***Бухгалтер:*** - Для вакансий - искать в названии вакансии, для резюме - в названии резюме\n",
+    "\n",
+    "***Менеджер:*** - Для вакансий - искать в названии вакансии, для резюме - в названии резюме\n",
+    "\n",
+    "***Директор:*** - Для вакансий - искать в названии вакансии, для резюме - в названии резюме\n",
+    "\n",
+    "### Москва: Количество вакансий и резюме:\n",
+    "\n",
+    "Сайт\\Ключевое слово    | Продавец | Курьер | Программист | Бухгалтер | Менеджер | Директор\n",
+    ":--------------------- | :------- | :----- | :---------- | :-------- | :------- | :-------\n",
+    "Вакансии headhunter.ru | 13785    | 7399   | 14255       | 9597      | 52204    | 44800\n",
+    "Резюме headhunter.ru   | 339228   | 197833 | 87966       | 287146    | 1508470  | 1200429        \n",
+    "---------------------- | -------- | ------ | ----------- | --------- | -------- | --------\n",
+    "Вакансии avito.ru      | 7549     | 16090  | 40          | 272       | 9373     | 501        \n",
+    "Резюме avito.ru        | 18030    | 15922  | 1484        | 7876      | 18018    | 5031\n",
+    "---------------------- | -------- | ------ | ----------- | --------- | -------- | --------\n",
+    "Вакансии superjob.ru   | 8510     | 2067   | 393         | 496       | 3594     | 1115\n",
+    "Резюме superjob.ru     | 597308   | 233725 | 111587      | 493535    | 705656   | 526710        \n",
+    "---------------------- | -------- | ------ | ----------- | --------- | -------- | --------\n",
+    "Вакансии rabota.ru     | 8483     | 1285   | 893         | 214       | 3855     | 553\n",
+    "Резюме rabota.ru       | 223102   | 153634 | 23656       | 151819    | 471615   | 76330\n",
+    "\n",
+    "### Краснодарский край:  Количество вакансий и резюме:\n",
+    "\n",
+    "Сайт\\Ключевое слово    | Продавец | Курьер | Программист | Бухгалтер | Менеджер | Директор\n",
+    ":--------------------- | :------- | :----- | :---------- | :-------- | :------- | :-------\n",
+    "Вакансии headhunter.ru |  3386    | 1053   | 765         | 1571      | 9141     |  8028\n",
+    "Резюме headhunter.ru   |  131796  | 2019   | 8812        | 67001     | 212446   |  174157\n",
+    "---------------------- | -------- | ------ | ----------- | --------- | -------- | --------\n",
+    "Вакансии avito.ru      |  3766    | 6020   | 104         | 452       | 45656    |  359\n",
+    "Резюме avito.ru        |  15310   | 3709   | 745         | 5072      | 9869     | 2557       \n",
+    "---------------------- | -------- | ------ | ----------- | --------- | -------- | --------\n",
+    "Вакансии superjob.ru   |  2280    | 1020   | 31          | 46        | 1329     | 406        \n",
+    "Резюме superjob.ru     | 108930   | 13249  | 11182       | 69941     | 145365   | 68889        \n",
+    "---------------------- | -------- | ------ | ----------- | --------- | -------- | --------\n",
+    "Вакансии rabota.ru     | 3073     | 279    | 213         | 35        | 2628     | 361\n",
+    "Резюме rabota.ru       | 22982    | 4988   | 1644        | 18412     | 41629    | 13575\n",
+    "\n",
+    "\n",
+    "### Владивосток, Приморский край:  Количество вакансий и резюме:\n",
+    "\n",
+    "Сайт\\Ключевое слово    | Продавец | Курьер | Программист | Бухгалтер | Менеджер | Директор\n",
+    ":--------------------- | :------- | :----- | :---------- | :-------- | :------- | :-------\n",
+    "Вакансии headhunter.ru |    450   | 240    | 201         |  540      | 1941     | 1856    \n",
+    "Резюме headhunter.ru   |  12228   | 2621   | 1550        |  7004     | 28448    | 25269\n",
+    "---------------------- | -------- | ------ | ----------- | --------- | -------- | --------\n",
+    "Вакансии avito.ru      |  211     | 764    | 1           |  19       | 509      | 23\n",
+    "Резюме avito.ru        |  584     | 189    | 88          | 158       | 696      | 73\n",
+    "---------------------- | -------- | ------ | ----------- | --------- | -------- | --------\n",
+    "Вакансии superjob.ru   |  98      | 295    | 9           | 9         | 414      | 23\n",
+    "Резюме superjob.ru     | 8621     | 1937   | 1177        | 6546      | 16726    | 8075\n",
+    "---------------------- | -------- | ------ | ----------- | --------- | -------- | --------\n",
+    "Вакансии rabota.ru     | 1480     | 63     | 215         | 27        | 2342     | 22\n",
+    "Резюме rabota.ru       | 1482     | 372    | 92          | 485       | 2238     | 525\n",
+    "---------------------- | -------- | ------ | ----------- | --------- | -------- | --------\n",
+    "Вакансии farpost.ru    | 1175     | 72     | 66          | 433       | 1143     | 38\n",
+    "Резюме farpost.ru      | 34741    | 3832   | 696         | 485       | 2238     | 525\n",
+    "\n"
    ]
   },
   {
