--- a/Отчет_по_задаче.ipynb
+++ b/Отчет_по_задаче.ipynb
@@ -6850,6 +6850,11 @@
    "id": "a75b4108",
    "metadata": {},
    "source": [
+    "![screen7.png](pics/screen7.png)\n",
+    "![screen8.png](pics/screen8.png)\n",
+    "![screen9.png](pics/screen9.png)\n",
+    "\n",
+    "\n",
     "## Выводы по заданию №2:\n",
     "\n",
     "- В разных специальностях по разному. Но видно что везде Headhunter стабильно имеет аудиторию. Как в разбивке по регионам, так и в разбивке по специальностям.\n",
@@ -6877,14 +6882,6 @@
     "Телерекламой rabota.ru привлекает соискателей размещать резюме. \n",
     "Могу предположить, что работодателей rabota.ru может выгодно привлекать из аудитории других продуктов Сбера. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fae9946",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
